[backend] add command swagger API
